--- a/home.html
+++ b/home.html
@@ -1,45 +1,82 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-<script
-src="http://maps.googleapis.com/maps/api/js">
-</script>
+  <head>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <title>Draggable Polygons</title>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      #map {
+        height: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+// This example creates draggable triangles on the map.
+// Note also that the red triangle is geodesic, so its shape changes
+// as you drag it north or south.
 
-<script>
-var x=new google.maps.LatLng(40.356887,-74.661940);
-var stavanger=new google.maps.LatLng(40.357120,-74.662049);
-var amsterdam=new google.maps.LatLng(40.357149, -74.661906);
-var london=new google.maps.LatLng(40.356901,-74.661802);
-var corner4=new google.maps.LatLng(40.356887,-74.661940);
+function initMap() {
 
-function initialize()
-{
-var mapProp = {
-  center:x,
-  zoom:20,
-  mapTypeId: google.maps.MapTypeId.ROADMAP
-  };
-  
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-
-var myTrip=[stavanger,amsterdam,london,corner4,stavanger];
-var flightPath=new google.maps.Polygon({
-  path:myTrip,
-  strokeColor:"#0000FF",
-  strokeOpacity:0.8,
-  strokeWeight:2,
-  fillColor:"#0000FF",
-  fillOpacity:0.4
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 20,
+    center: {lat: 40.356966, lng: -74.661831},
+    mapTypeId: google.maps.MapTypeId.SATELLITE
   });
 
-flightPath.setMap(map);
+  var blueCoords = [
+    {lat: 40.357113, lng: -74.662037},
+    {lat: 40.357120, lng: -74.662006},
+    {lat: 40.357110, lng: -74.662008},
+    {lat: 40.357106, lng: -74.662037}
+    
+  ];
+
+  // [START region_red_triangle]
+  var redCoords = [
+    {lat: 40.356887, lng: -74.661940},
+    {lat: 40.357117, lng: -74.662043},
+    {lat: 40.357156, lng: -74.661906},
+    {lat: 40.356966, lng: -74.661831}
+  ];
+
+  // Construct a draggable red triangle with geodesic set to true.
+  new google.maps.Polygon({
+    map: map,
+    paths: redCoords,
+    strokeColor: '#FF0000',
+    strokeOpacity: 0.8,
+    strokeWeight: 2,
+    fillColor: '#FF0000',
+    fillOpacity: 0.35,
+    draggable: false,
+    geodesic: true
+  });
+  // [END region_red_triangle]
+
+  // Construct a draggable blue triangle with geodesic set to false.
+  new google.maps.Polygon({
+    map: map,
+    paths: blueCoords,
+    strokeColor: '#0000FF',
+    strokeOpacity: 0.8,
+    strokeWeight: 2,
+    fillColor: '#0000FF',
+    fillOpacity: 0.35,
+    draggable: true,
+    geodesic: false
+  });
 }
 
-google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-</head>
-
-<body>
-<div id="googleMap" style="width:500px;height:380px;"></div>
-</body>
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-dvhvmVJccEPUoL78VOqhEXLX1xH8oGo&callback=initMap&signed_in=true" async defer>
+    </script>
+  </body>
 </html>
